--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 </head>
 <body>
 
+    <nav id="monster-nav">
+        <button class="prev">Previous</button>
+        <button class="next">Next</button>
+    </nav>
+
+    <section id="monsters">
+
+    </section>
+
     <template id="monster-template">
         <article class="monster">
             <h2 class="name"></h2>
             <p class="description"></p>
+            <h3>Actions:</h3>
+            <ul class="actions"></ul>
         </article>
     </template>
     
